# simposio-integracar

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requisitos.md  skills-lock.json  start.sh
.github/workflows/: deploy.yaml
src/apps/accounts/: admin.py  forms.py  managers.py  models.py  signals.py  tests.py  urls.py  views.py
src/apps/accounts/migrations/: 0001_initial.py  0002_alter_user_managers_remove_user_nome_user_first_name_and_more.py  0003_alter_profile_cpf_alter_user_first_name_and_more.py
src/apps/accounts/templates/accounts/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt  (+4 more)
src/apps/accounts/templatetags/: utils.py
src/apps/events/: admin.py  forms.py  models.py  urls.py  views.py
src/apps/events/migrations/: 0001_initial.py  0002_eixotematico.py  0003_event_user_reviewers_eixotematico_event_and_more.py  0004_event_minimum_reviewers_alter_event_blind_review.py
src/apps/papers/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
src/apps/papers/migrations/: 0001_initial.py  0002_alter_coauthor_options_alter_paper_options_and_more.py  0003_remove_paper_authors.py  0004_paper_eixo_tematico.py  0005_alter_coauthor_email_alter_coauthor_name_and_more.py  0006_alter_coauthor_unique_together_and_more.py  0006_alter_submission_options_paper_status_and_more.py  0007_submission_version_required.py  0008_mark_existing_papers_submitted.py  0009_alter_coauthor_unique_together_and_more.py
src/apps/reviews/: admin.py  forms.py  models.py  notifications.py  tests.py  urls.py  views.py
src/apps/reviews/migrations/: 0001_initial.py  0002_committeemember_criterionscore_finaldecision_and_more.py  0003_alter_review_score.py  0004_simplify_reviews_without_rounds.py
src/core/: env.py  mixins.py  settings.py  urls.py
src/design-system/: README.md
src/design-system/tokens/: secom-es.scss  secom-es.tokens.json  secom-es.variables.css  tailwind.secom-es.js
src/static/css/: styles.css
src/static/img/favicon/: site.webmanifest
src/templates/: base.html  platform_base.html
src/templates/components/: alert.html  field.html  htmx_form.html  modal.html
src/templates/components/django_form/: field.html  index.html
(+17 files in other folders)
